# hisab-mimamsa

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/architecture/adr/: 001-input-output-validation.md  002-natural-units-in-qft.md  003-dependency-free-bridges.md  004-manifestation-intensity-model.md  005-feature-gated-modules.md
docs/development/: roadmap.md
examples/: cosmology.rs  qft.rs  relativity.rs  unified.rs
scripts/: bench-history.sh
src/: constants.rs  error.rs  lib.rs  logging.rs
src/cosmology/: expansion.rs  friedmann.rs  mod.rs
src/quantum_field/: coupling.rs  feynman.rs  mod.rs  propagator.rs  vacuum.rs
src/relativity/: black_hole.rs  geodesic.rs  lensing.rs  lorentz.rs  metric.rs  mod.rs
src/unified/: fixed_point.rs  holographic.rs  mod.rs  scale_bridge.rs
tests/: adversarial.rs  integration.rs  invariants.rs  serde_roundtrip.rs
