[package]
name = "hisab-mimamsa"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Hisab-Mimamsa — theoretical physics engine: general relativity, quantum field theory, cosmology, and unified field models"
homepage = "https://github.com/MacCracken/hisab-mimamsa"
repository = "https://github.com/MacCracken/hisab-mimamsa"
readme = "README.md"
documentation = "https://docs.rs/hisab-mimamsa"
keywords = ["physics", "relativity", "cosmology", "quantum-field-theory", "science"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
hisab = "1.4"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging", "cosmology", "qft", "unified"]
logging = ["dep:tracing-subscriber"]
cosmology = []
qft = []
unified = ["cosmology", "qft"]

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "relativity"

[[example]]
name = "cosmology"
required-features = ["cosmology"]

[[example]]
name = "qft"
required-features = ["qft"]

[[example]]
name = "unified"
required-features = ["unified"]
